--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /app/etc/local.xml
 /.idea
+/var
+/db
+/downloader
+/Applications/MAMP/htdocs/webinse/app/code/local/DS
+/app/etc/modules/DS_News.xml
